@@ -1,48 +1,0 @@
-@comment $NetBSD: PLIST,v 1.6 2009/06/14 17:48:53 joerg Exp $
-include/libglademm-2.4/libglademm.h
-include/libglademm-2.4/libglademm/init.h
-include/libglademm-2.4/libglademm/private/xml_p.h
-include/libglademm-2.4/libglademm/variablesmap.h
-include/libglademm-2.4/libglademm/wrap_init.h
-include/libglademm-2.4/libglademm/xml.h
-lib/libglademm-2.4.la
-lib/libglademm-2.4/include/libglademmconfig.h
-lib/libglademm-2.4/proc/m4/convert.m4
-lib/libglademm-2.4/proc/m4/convert_libglademm.m4
-lib/pkgconfig/libglademm-2.4.pc
-share/devhelp/books/libglademm-2.4/libglademm-2.4.devhelp
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/annotated.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGlib_1_1Exception.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGlib_1_1Exception__inherit__graph.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGlib_1_1Object.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGlib_1_1Object__inherit__graph.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1VariablesMap-members.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1VariablesMap.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1Xml-members.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1Xml.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1XmlError-members.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1XmlError.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1XmlError__inherit__graph.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classGnome_1_1Glade_1_1Xml__inherit__graph.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/classes.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/doxygen.css
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/doxygen.png
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/files.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/functions.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/functions_func.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/functions_type.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/functions_vars.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/graph_legend.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/graph_legend.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/hierarchy.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/index.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/inherit__graph__0.dot
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/inherits.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/init_8h.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/namespaceGlib.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/namespaceGnome.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/namespaceGnome_1_1Glade.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/namespaces.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/tabs.css
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/variablesmap_8h.html
-share/doc/gnomemm-2.6/libglademm-2.4/docs/reference/html/xml_8h.html
