@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.11 2021/10/26 10:15:21 nia Exp $
-
-BLAKE2s (libglademm-2.6.7.tar.bz2) = 46b927d84c2a16618f120a8f3d71931c4815870d303165a294dbac3d36de18ca
-SHA512 (libglademm-2.6.7.tar.bz2) = d7042d0549df9322d3202d5c0733d65b153a8ff451bb9e401b9d93a915ec4c2c086428e4febcbae2ecec5936955b7afbc59beff93d492f23b7b8e2b19fe806b0
-Size (libglademm-2.6.7.tar.bz2) = 326385 bytes
