@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2546 2024/04/17 14:47:54 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2547 2024/04/17 14:49:18 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4201,3 +4201,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed audio/paman [wiz 2024-04-17]
 	Removed audio/pavumeter [wiz 2024-04-17]
 	Removed audio/paprefs [wiz 2024-04-17]
+	Removed devel/libglademm [wiz 2024-04-17]
